[tool.poetry]
name = "django-hierarchical-models"
version = "0.1.0"
description = "Adds hierarchical models to Django"
authors = ["Josh Bedwell <rcxwhiz@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rcxwhiz/django-hierarchical-models"
packages = [{include = "django-hierarchical-models"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
