[tool.poetry]
name = "django-hierarchical-models"
version = "1.2.0"
description = "Adds hierarchical models to Django"
authors = ["Josh Bedwell <rcxwhiz@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rcxwhiz/django-hierarchical-models"
packages = [{include = "django_hierarchical_models"}]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0"
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2 || ^5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.4.0"
tox = "^4.14.2"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
isort = "^5.13.2"
psycopg2-binary = "^2.9.9"
mypy = "^1.9.0"
django-stubs = "^4.2.7"
parameterized = "^0.9.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
django_find_project = "false"
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = "."

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"
